--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,15 +22,16 @@ pytest = "^8.2.1"
 tabulate = "^0.9.0"
 
 jinja2 = "^3.1.4"
+webdriver-manager = "^4.0.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 cllm = 'cllm.cllm:main'
-cllm-splitter-text = 'cllm.toolkit.cllm_splitter_text:main'
-cllm-load-website = 'cllm.toolkit.scraper:main'
-cllm-search-google = 'cllm.toolkit.search_google:main'
+cllm-splitter-text = 'cllm.toolkit.splitter_text:main'
+cllm-load-website = 'cllm.toolkit.load_website:main'
+cllm-load-search-google = 'cllm.toolkit.load_search_google:main'
 cllm-load-files = 'cllm.toolkit.load_files:main'
 cllm-vector-faiss-load = 'cllm.toolkit.vector_faiss_load:main'
 cllm-vector-faiss-write = 'cllm.toolkit.vector_faiss_write:main'
