Refactor toolkit scripts and update documentation
- Updated README.md to correct the link to the toolkit documentation.
- Changed environment variable for logging level in load_dir.py from LOGLEVEL to CLLM_LOGLEVEL.
- Renamed toolkit scripts for consistency:
  - search_google.py to load_search_google.py
  - scraper.py to load_webpages.py
- Removed shebang from splitter_text.py.
- Updated documentation in docs/toolkit/:
  - Added new documentation files for cllm-load-files, cllm-load-google-search, cllm-load-webpages, cllm-output-code, cllm-repeater, cllm-splitter-docs, and cllm-splitter-text.
  - Corrected links and descriptions in toolkit README.md.
- Modified examples/rag/chat.sh to use the renamed cllm-load-website script.
- Updated pyproject.toml to reflect the renamed and new toolkit scripts in the [tool.poetry.scripts] section.

closes #12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,14 +28,14 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 cllm = 'cllm.cllm:main'
-cllm-splitter-text = 'cllm.toolkit.splitter_text:main'
-cllm-scraper = 'cllm.toolkit.scraper:main'
-cllm-search-google = 'cllm.toolkit.search_google:main'
-cllm-load-files = 'cllm.toolkit.load_files:main'
-cllm-vector-faiss = 'cllm.toolkit.vector_faiss:main'
-cllm-splitter-docs = 'cllm.toolkit.splitter_docs:main'
-cllm-load-dir = 'cllm.toolkit.load_dir:main'
 cllm-gen-dalle = 'cllm.toolkit.gen_dalle:main'
+cllm-load-dir = 'cllm.toolkit.load_dir:main'
+cllm-load-files = 'cllm.toolkit.load_files:main'
+cllm-load-search-google = 'cllm.toolkit.load_search_google:main'
 cllm-load-sitemap = 'cllm.toolkit.load_sitemap:main'
+cllm-load-webpages = 'cllm.toolkit.load_webpages:main'
 cllm-output-code = 'cllm.toolkit.output_code:main'
 cllm-repeater = 'cllm.toolkit.repeater:main'
+cllm-splitter-docs = 'cllm.toolkit.splitter_docs:main'
+cllm-splitter-text = 'cllm.toolkit.splitter_text:main'
+cllm-vector-faiss = 'cllm.toolkit.vector_faiss:main'
