#17 feat: Add support for Groq and Ollama model providers
- Updated `.cllm/systems` configurations to include new model providers: Groq and Ollama.
- Added new system files for Groq models: `gemma.yml`, `llama.yml`, and `mixtral.yml`.
- Modified existing system files to include the `provider` field and updated descriptions.
- Updated `README.md` to include Groq API key requirement and list supported model providers.
- Refactored `cllm.py` to:
  - Add base URLs for Groq and Ollama.
  - Implement client retrieval functions for OpenAI, Ollama, and Groq.
  - Update the `systems` command to list available systems with provider information.
  - Introduce a `get_client` function to dynamically select the appropriate client based on the provider.
- Updated `docs/cllm.md` to reflect changes in command usage and system file structure.

closes #17

--- a/.cllm/systems/base.yml
+++ b/.cllm/systems/base.yml
@@ -1,3 +1,4 @@
 model: gpt-4o
-description: A basic system. No system prompt is provided.
+provider: openai
+description: GPT-4o model provided by OpenAI
 temperature: 0
