--- a/.cllm/systems/gpt/4.yml
+++ b/.cllm/systems/gpt/4.yml
@@ -1,3 +1,4 @@
 model: gpt-4-turbo
-description: A basic system. No system prompt is provided.
+provider: openai
+description: OpenAI gpt-4-turbo for general purpose.
 temperature: 0
