--- a/.cllm/systems/gpt/4o.yml
+++ b/.cllm/systems/gpt/4o.yml
@@ -1,3 +1,4 @@
 model: gpt-4o
-description: A basic system. No system prompt is provided.
+provider: openai
+description: OpenAI gpt-4o for general purpose.
 temperature: 0
