--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.9,<3.13"
 openai = "^1.30.1"
 requests = "^2.31.0"
 pyyaml = "^6.0.1"
@@ -21,7 +21,9 @@ tiktoken = "^0.7.0"
 pytest = "^8.2.1"
 tabulate = "^0.9.0"
 jinja2 = "^3.1.4"
+unstructured = "^0.14.5"
 
+webdriver-manager = "^4.0.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
