#21 feat: Add support for additional LLM models and providers
- Added new model configurations for Claude Haiku, Claude Opus, Claude Sonnet, and Qwen models.
- Updated README.md to include a comprehensive list of supported model providers and models.
- Replaced custom client handling with `litellm` library for model completions.
- Updated `cllm.py` to use `litellm` for handling model completions.
- Added new dependencies in `poetry.lock` and `pyproject.toml` for `litellm` and related packages.
- Incremented version to 0.1.1.

This update enhances the flexibility and scalability of the toolkit by supporting a wider range of LLM models and simplifying the client management process.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cllm"
-version = "0.1.0"
+version = "0.1.1"
 description = "LLM Prompt Chaining in Bash"
 authors = ["owen.zanzal <ozanzal@gmail.com>"]
 license = "MIT"
@@ -24,6 +24,7 @@ jinja2 = "^3.1.4"
 unstructured = "^0.14.5"
 
 webdriver-manager = "^4.0.1"
+litellm = "^1.41.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
