Add cllm-prompt CLI tool for generating prompts using Jinja2 templates
- Introduced a new CLI tool `cllm-prompt` in `cllm/toolkit/prompt.py` for generating prompts using Jinja2 templates.
- Added functionality to list available templates and generate prompts based on specified context parameters.
- Configured logging and argument parsing for the CLI tool.
- Created documentation for `cllm-prompt` in `docs/toolkit/cllm-prompt.md`, detailing usage, options, and examples.
- Updated `pyproject.toml` to include `cllm-prompt` as a script entry point.

This enhancement provides a flexible and powerful way to generate customized prompts, improving the usability and functionality of the toolkit.

closes #28

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 cllm = 'cllm.cllm:main'
+cllm-prompt = 'cllm.toolkit.prompt:main'
 cllm-gen-dalle = 'cllm.toolkit.gen_dalle:main'
 cllm-load-dir = 'cllm.toolkit.load_dir:main'
 cllm-load-files = 'cllm.toolkit.load_files:main'
