--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ unstructured = "^0.14.5"
 
 webdriver-manager = "^4.0.1"
 litellm = "^1.41.0"
+boto3 = "^1.34.138"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
