--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cllm"
-version = "0.1.3"
+version = "0.1.9"
 description = "LLM Prompt Chaining in Bash"
 authors = ["owen.zanzal <ozanzal@gmail.com>"]
 license = "MIT"
@@ -26,6 +26,8 @@ unstructured = "^0.14.5"
 webdriver-manager = "^4.0.1"
 litellm = "^1.41.0"
 boto3 = "^1.34.138"
+sounddevice = "^0.5.0"
+soundfile = "^0.12.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
@@ -44,3 +46,5 @@ cllm-repeater = 'cllm.toolkit.repeater:main'
 cllm-splitter-docs = 'cllm.toolkit.splitter_docs:main'
 cllm-splitter-text = 'cllm.toolkit.splitter_text:main'
 cllm-vector-faiss = 'cllm.toolkit.vector_faiss:main'
+cllm-speech-text = 'cllm.toolkit.speech_text:main'
+cllm-listen = 'cllm.toolkit.listen:main'
