Update model configuration and documentation
- Changed model from gpt-4-turbo to gpt-4o-mini in the configuration file for improved performance.
- Updated the description in the configuration file to reflect the new model.
- Corrected the name of the toolkit from "Command Line LLM" to "CMD|LLM" in the README for consistency.
- Modified the chat example script to use "chat-vision" context and added functionality to capture a screenshot before processing input.

--- a/.cllm/systems/gpt/4.yml
+++ b/.cllm/systems/gpt/4.yml
@@ -1,4 +1,4 @@
-model: gpt-4-turbo
+model: gpt-4o-mini
 provider: openai
-description: OpenAI gpt-4-turbo for general purpose.
+description: OpenAI GPT 4o mini for general purpose.
 temperature: 0
