--- a/examples/configs/code-review.Cllmfile.yml
+++ b/examples/configs/code-review.Cllmfile.yml
@@ -1,5 +1,9 @@
 # Code Review Configuration
-# Usage: git diff | cllm --config code-review
+# Automatically includes git diff and project context for comprehensive reviews
+#
+# Usage:
+#   cllm --config code-review "Review these changes"
+#   cllm --config code-review "Check for security issues in my latest commit"
 
 # Use GPT-4 for code analysis
 model: "gpt-4"
@@ -22,6 +26,39 @@ default_system_message: |
   6. **Testing**: Suggest test cases or validation needs
 
   Be constructive, specific, and actionable in your feedback.
+
+# Context commands for code review (ADR-0011)
+# Automatically gather git changes and project state
+context_commands:
+  # Show uncommitted changes
+  - name: "Git Diff (Staged)"
+    command: "git diff --cached"
+    on_failure: "ignore"
+    timeout: 10
+
+  # Show unstaged changes
+  - name: "Git Diff (Unstaged)"
+    command: "git diff"
+    on_failure: "ignore"
+    timeout: 10
+
+  # Show modified files summary
+  - name: "Git Status"
+    command: "git status --short"
+    on_failure: "warn"
+    timeout: 5
+
+  # Recent commit for context
+  - name: "Recent Commit"
+    command: "git log -1 --stat"
+    on_failure: "ignore"
+    timeout: 5
+
+  # Current branch
+  - name: "Current Branch"
+    command: "git branch --show-current"
+    on_failure: "ignore"
+    timeout: 5
 
 # Reliability
 timeout: 90
