--- a/.cllm/commit.Cllmfile.yml
+++ b/.cllm/commit.Cllmfile.yml
@@ -1,7 +1,7 @@
 # Commit Message Generation Configuration
 # Usage: git diff --staged | cllm --config commit
 
-model: "gpt-4"
+model: "gpt-5-mini"
 temperature: 0.4
 max_tokens: 500
 
@@ -9,7 +9,7 @@ timeout: 60
 num_retries: 2
 
 fallbacks:
-  - "claude-3-sonnet-20240229"
+  - "gpt-5"
 
 default_system_message: |
   You are generating conventional commit messages for the CLLM project.
@@ -39,3 +39,10 @@ default_system_message: |
   - Be specific and actionable
 
   Output ONLY the commit message, nothing else.
+
+context_commands:
+  # Show uncommitted changes
+  - name: "Git Diff (Staged)"
+    command: "git diff --cached"
+    on_failure: "ignore"
+    timeout: 10
