--- a/.github/workflows/gemini-issue-scheduled-triage.yml
+++ b/.github/workflows/gemini-issue-scheduled-triage.yml
@@ -1,47 +1,47 @@
-name: '📋 Gemini Scheduled Issue Triage'
+name: "📋 Gemini Scheduled Issue Triage"
 
 on:
   schedule:
-    - cron: '0 * * * *' # Runs every hour
+    - cron: "0 * * * *" # Runs every hour
   workflow_dispatch:
 
 concurrency:
-  group: '${{ github.workflow }}'
+  group: "${{ github.workflow }}"
   cancel-in-progress: true
 
 defaults:
   run:
-    shell: 'bash'
+    shell: "bash"
 
 permissions:
-  contents: 'read'
-  id-token: 'write'
-  issues: 'write'
-  statuses: 'write'
+  contents: "read"
+  id-token: "write"
+  issues: "write"
+  statuses: "write"
 
 jobs:
   triage-issues:
     timeout-minutes: 5
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
-      - name: 'Checkout repository'
-        uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
+      - name: "Checkout repository"
+        uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683" # ratchet:actions/checkout@v4
 
-      - name: 'Generate GitHub App Token'
-        id: 'generate_token'
+      - name: "Generate GitHub App Token"
+        id: "generate_token"
         if: |-
           ${{ vars.APP_ID }}
-        uses: 'actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e' # ratchet:actions/create-github-app-token@v2
+        uses: "actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e" # ratchet:actions/create-github-app-token@v2
         with:
-          app-id: '${{ vars.APP_ID }}'
-          private-key: '${{ secrets.APP_PRIVATE_KEY }}'
+          app-id: "${{ vars.APP_ID }}"
+          private-key: "${{ secrets.APP_PRIVATE_KEY }}"
 
-      - name: 'Find untriaged issues'
-        id: 'find_issues'
+      - name: "Find untriaged issues"
+        id: "find_issues"
         env:
-          GITHUB_TOKEN: '${{ steps.generate_token.outputs.token || secrets.GITHUB_TOKEN }}'
-          GITHUB_REPOSITORY: '${{ github.repository }}'
-          GITHUB_OUTPUT: '${{ github.output }}'
+          GITHUB_TOKEN: "${{ steps.generate_token.outputs.token || secrets.GITHUB_TOKEN }}"
+          GITHUB_REPOSITORY: "${{ github.repository }}"
+          GITHUB_OUTPUT: "${{ github.output }}"
         run: |-
           set -euo pipefail
 
@@ -62,11 +62,11 @@ jobs:
           ISSUE_COUNT="$(echo "${ISSUES}" | jq 'length')"
           echo "✅ Found ${ISSUE_COUNT} issues to triage! 🎯"
 
-      - name: 'Get Repository Labels'
-        id: 'get_labels'
-        uses: 'actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea'
+      - name: "Get Repository Labels"
+        id: "get_labels"
+        uses: "actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea"
         with:
-          github-token: '${{ steps.generate_token.outputs.token || secrets.GITHUB_TOKEN }}'
+          github-token: "${{ steps.generate_token.outputs.token || secrets.GITHUB_TOKEN }}"
           script: |-
             const { data: labels } = await github.rest.issues.listLabelsForRepo({
               owner: context.repo.owner,
@@ -77,25 +77,25 @@ jobs:
             core.info(`Found ${labelNames.length} labels: ${labelNames.join(', ')}`);
             return labelNames;
 
-      - name: 'Run Gemini Issue Analysis'
+      - name: "Run Gemini Issue Analysis"
         if: |-
           ${{ steps.find_issues.outputs.issues_to_triage != '[]' }}
-        uses: 'google-github-actions/run-gemini-cli@v0'
-        id: 'gemini_issue_analysis'
+        uses: "google-github-actions/run-gemini-cli@v0"
+        id: "gemini_issue_analysis"
         env:
-          GITHUB_TOKEN: '' # Do not pass any auth token here since this runs on untrusted inputs
-          ISSUES_TO_TRIAGE: '${{ steps.find_issues.outputs.issues_to_triage }}'
-          REPOSITORY: '${{ github.repository }}'
-          AVAILABLE_LABELS: '${{ steps.get_labels.outputs.available_labels }}'
+          GITHUB_TOKEN: "" # Do not pass any auth token here since this runs on untrusted inputs
+          ISSUES_TO_TRIAGE: "${{ steps.find_issues.outputs.issues_to_triage }}"
+          REPOSITORY: "${{ github.repository }}"
+          AVAILABLE_LABELS: "${{ steps.get_labels.outputs.available_labels }}"
         with:
-          gemini_cli_version: '${{ vars.GEMINI_CLI_VERSION }}'
-          gcp_workload_identity_provider: '${{ vars.GCP_WIF_PROVIDER }}'
-          gcp_project_id: '${{ vars.GOOGLE_CLOUD_PROJECT }}'
-          gcp_location: '${{ vars.GOOGLE_CLOUD_LOCATION }}'
-          gcp_service_account: '${{ vars.SERVICE_ACCOUNT_EMAIL }}'
-          gemini_api_key: '${{ secrets.GEMINI_API_KEY }}'
-          use_vertex_ai: '${{ vars.GOOGLE_GENAI_USE_VERTEXAI }}'
-          use_gemini_code_assist: '${{ vars.GOOGLE_GENAI_USE_GCA }}'
+          gemini_cli_version: "${{ vars.GEMINI_CLI_VERSION }}"
+          gcp_workload_identity_provider: "${{ vars.GCP_WIF_PROVIDER }}"
+          gcp_project_id: "${{ vars.GOOGLE_CLOUD_PROJECT }}"
+          gcp_location: "${{ vars.GOOGLE_CLOUD_LOCATION }}"
+          gcp_service_account: "${{ vars.SERVICE_ACCOUNT_EMAIL }}"
+          gemini_api_key: "${{ secrets.GEMINI_API_KEY }}"
+          use_vertex_ai: "${{ vars.GOOGLE_GENAI_USE_VERTEXAI }}"
+          use_gemini_code_assist: "${{ vars.GOOGLE_GENAI_USE_GCA }}"
           settings: |-
             {
               "debug": ${{ fromJSON(env.DEBUG || env.ACTIONS_STEP_DEBUG || false) }},
@@ -145,16 +145,16 @@ jobs:
             - Output only valid JSON format
             - Do not include any explanation or additional text, just the JSON
 
-      - name: 'Apply Labels to Issues'
+      - name: "Apply Labels to Issues"
         if: |-
           ${{ steps.gemini_issue_analysis.outcome == 'success' &&
               steps.gemini_issue_analysis.outputs.summary != '[]' }}
         env:
-          REPOSITORY: '${{ github.repository }}'
-          LABELS_OUTPUT: '${{ steps.gemini_issue_analysis.outputs.summary }}'
-        uses: 'actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea'
+          REPOSITORY: "${{ github.repository }}"
+          LABELS_OUTPUT: "${{ steps.gemini_issue_analysis.outputs.summary }}"
+        uses: "actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea"
         with:
-          github-token: '${{ steps.generate_token.outputs.token || secrets.GITHUB_TOKEN }}'
+          github-token: "${{ steps.generate_token.outputs.token || secrets.GITHUB_TOKEN }}"
           script: |-
             // Strip code block markers if present
             const rawLabels = process.env.LABELS_OUTPUT;
