fix: liniting issues

--- a/.github/workflows/gemini-issue-automated-triage.yml
+++ b/.github/workflows/gemini-issue-automated-triage.yml
@@ -10,6 +10,7 @@ on:
       - "created"
   workflow_dispatch:
     inputs:
+      # trunk-ignore(checkov/CKV_GHA_7)
       issue_number:
         description: "issue number to triage"
         required: true
