--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -12,6 +12,7 @@ jobs:
       contains(github.event.comment.body, ' /opencode') ||
       startsWith(github.event.comment.body, '/opencode')
     runs-on: ubuntu-latest
+    # trunk-ignore(checkov/CKV2_GHA_1)
     permissions:
       contents: read
       id-token: write
